# Asm-BSU-2022

./: README.md
lab-01/: README.md  solution.asm  tests.cpp
lab-02/: CMakeLists.txt  Lab2_Semenov_Mikhail_Unix.asm  README.md  tests.cpp
lab-03/: CMakeLists.txt  Lab3_Semenov_Mikhail_Unix.asm  README.md  tests.cpp
lab-04/: CMakeLists.txt  Lab4_Semenov_Mikhail_Unix.asm  README.md  tests.cpp
